@@ -1,3 +1,6 @@
+2004-08-20 Magnus Hagdorn
+ * start of profile stuff
+
 2004-08-09 Magnus Hagdorn
  * added new program to plot variables at a single location (plotSpot.py, setup.py)
  * added non-geographic projection (CF_area.py, CF_file.py 
